--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -13,10 +13,10 @@
    "source": [
     "Here, you'll learn how to manage a growing number of spatial datasets as a single queryable collection:\n",
     "\n",
-    "1. curate and ingest spatial data (![spatial1/6](https://img.shields.io/badge/spatial1/6-lightgrey))\n",
-    "2. query & analyze spatial datasets ([![spatial2/6](https://img.shields.io/badge/spatial2/6-lightgrey)](/spatial2))\n",
-    "3. load the collection into memory & train a ML model ([![spatial3/6](https://img.shields.io/badge/spatial3/6-lightgrey)](/spatial3))\n",
-    "4. create and share interactive visualizations with vitessce ([![spatial4/6](https://img.shields.io/badge/spatial4/6-lightgrey)](/spatial4))\n",
+    "1. curate and ingest spatial data (![spatial1/4](https://img.shields.io/badge/spatial1/4-lightgrey))\n",
+    "2. query & analyze spatial datasets ([![spatial2/4](https://img.shields.io/badge/spatial2/4-lightgrey)](/spatial2))\n",
+    "3. load the collection into memory & train a ML model ([![spatial3/4](https://img.shields.io/badge/spatial3/4-lightgrey)](/spatial3))\n",
+    "4. create and share interactive visualizations with vitessce ([![spatial4/4](https://img.shields.io/badge/spatial4/4-lightgrey)](/spatial4))\n",
     "\n",
     "\n",
     "```{toctree}\n",
@@ -27,6 +27,16 @@
     "spatial3\n",
     "spatial4\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spatial omics data integrates molecular profiling (e.g., transcriptomics, proteomics) with spatial information, preserving the spatial organization of cells and tissues.\n",
+    "It enables high-resolution mapping of molecular activity within biological contexts, crucial for understanding cellular interactions and microenvironments.\n",
+    "\n",
+    "Many different spatial technologies such as ... exist, but here, we focus on a 10X Xenium dataset "
    ]
   },
   {
