--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -500,7 +500,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "for condition in conditions:\n",
