--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -84,7 +84,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Process single-cell images with scPortrait's featurizer\n",
@@ -144,7 +148,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_df(\n",
@@ -174,7 +182,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Process KO cells to see if they behave differently\n",
@@ -206,7 +218,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_df(\n",
