--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -86,7 +86,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Define parameters for our RandomForest Classifier\n",
@@ -118,7 +122,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "study = ln.ULabel.using(\"scportrait/examples\").get(name=\"autophagy imaging\")\n",
@@ -197,7 +205,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# load data\n",
@@ -312,7 +324,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# visualize some example cells with classification scores from the test dataset\n",
@@ -630,7 +646,7 @@
    "notebook_metadata_filter": "-all"
   },
   "kernelspec": {
-   "display_name": "lamin",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -644,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
