--- a/docs/imaging.ipynb
+++ b/docs/imaging.ipynb
@@ -45,28 +45,20 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "First, we will load and annotate a collection of microscopy images in TIFF format that [was previously uploaded](https://lamin.ai/scportrait/examples/transform/asoq6WyPequ8?).\n",
+    "First, we load and annotate a collection of microscopy images in TIFF format that [was previously uploaded](https://lamin.ai/scportrait/examples/transform/asoq6WyPequ8?).\n",
     "\n",
-    "The images used here were acquired as part of a [study](https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1&ved=2ahUKEwj3m56hs52LAxWxRfEDHQZwKZ8QFnoECBIQAQ&usg=AOvVaw04HsGDIPcIPr1ldblXuh0Z) on autophagy, a cellular process during which cells recycle their components in autophagosomes.\n",
-    "\n",
-    "The study tracked genetic determinants of autophagy through fluorescence microscopy of human U2OS cells.\n",
-    "Cells were engineered to express two markers: the fluorescent autophagosome marker `mCherry-LC3B` and the fluorescent plasma membrane label `LckLip-mNeon`.\n",
-    "Autophagy was induced using `Torin-1`, and cells were counterstained for DNA visualization.\n",
-    "\n",
-    "These three structures are visualized in three separate image channels:\n",
-    "\n",
-    "| Channel | Imaged Structure   |\n",
-    "|---------|--------------------|\n",
-    "| 1       | DNA                |\n",
-    "| 2       | Autophagosomes     |\n",
-    "| 3       | Plasma Membrane    |"
+    "The images used here were acquired as part of a [study](https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.biorxiv.org/content/10.1101/2023.06.01.542416v1&ved=2ahUKEwj3m56hs52LAxWxRfEDHQZwKZ8QFnoECBIQAQ&usg=AOvVaw04HsGDIPcIPr1ldblXuh0Z) on autophagy, a cellular process during which cells recycle their components in autophagosomes. The study tracked genetic determinants of autophagy through fluorescence microscopy of human U2OS cells."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# pip install 'lamindb[jupyter,bionty]'\n",
@@ -124,7 +116,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "metadata_files.apply(lambda col: col.unique())"
@@ -143,6 +139,14 @@
     "`LckLip` is a membrane-targeted fluorescent protein, which helps outline the cellular boundaries of individual cells in the `Alexa488` channel.\n",
     "Furthermore, the cells’ DNA was stained using `Hoechst`, which we can visualize in the `DAPI` channel to identify the nuclei of individual cells.\n",
     "\n",
+    "These three structures are visualized in three separate image channels:\n",
+    "\n",
+    "| Channel | Imaged Structure   |\n",
+    "|---------|--------------------|\n",
+    "| 1       | DNA                |\n",
+    "| 2       | Autophagosomes     |\n",
+    "| 3       | Plasma Membrane    |\n",
+    "\n",
     "In addition to expressing fluorescently tagged proteins, some of the cells have had the `EI24` gene knocked out, leading to two different genotypes: `WT` (wild-type) cells and `EI24KO` (knockout) cells.\n",
     "For each genotype, two different clonal cell lines were analyzed, with multiple fields of view (FOVs) captured per condition.\n",
     "\n",
@@ -153,7 +157,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "autophagy_imaging_schema = ln.Schema(\n",
@@ -188,8 +196,6 @@
    },
    "outputs": [],
    "source": [
-    "# convert to categorical instead of object\n",
-    "\n",
     "curator = ln.curators.DataFrameCurator(metadata_files, autophagy_imaging_schema)\n",
     "try:\n",
     "    curator.validate()\n",
@@ -226,7 +232,7 @@
    "id": "14",
    "metadata": {},
    "source": [
-    "Now lets add all of our images to our lamindb instance in a loop already annotating all relevant metadata."
+    "Add all images to our lamindb instance to annotate all relevant metadata."
    ]
   },
   {
@@ -244,7 +250,7 @@
     "ln.Feature(name=\"study\", dtype=ln.ULabel).save()\n",
     "ln.ULabel(name=\"autophagy imaging\").save()\n",
     "\n",
-    "# loop through all artifacts and add feature values\n",
+    "# loop through all Artifacts and add feature values\n",
     "artifacts = []\n",
     "for _, row in metadata_files.iterrows():\n",
     "    artifact = (\n",
@@ -288,7 +294,7 @@
    "id": "17",
    "metadata": {},
    "source": [
-    "In addition, we create a collection to hold all `Artifacts` that belong to this specific imaging study."
+    "In addition, we create a {class}`~lamindb.Collection` to hold all {class}`~lamindb.Artifact` that belong to this specific imaging study."
    ]
   },
   {
