--- a/docs/imaging2.ipynb
+++ b/docs/imaging2.ipynb
@@ -29,7 +29,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
@@ -55,7 +59,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "input_images = (\n",
@@ -71,15 +79,19 @@
    "metadata": {},
    "source": [
     "The experiment contains different genotypes (`WT` and `EI24KO`) that were treated differently (`unstimulated` vs `14h Torin-1`).\n",
-    "For each condition multiple clonal cell lines and imaged multiple FOVs in all of the imaging channels are available.\n",
-    "To properly process this dataset we will need to get single-cell images from each FOV indivdually and tag them with all of the appropriate metadata so that we can identify genotype, treatment condition, clonal cell line and imaging experiment. "
+    "For each condition, multiple clonal cell lines were imaged across multiple fields of view in all imaging channels.\n",
+    "We need to get single-cell images from each FOV indivdually and tag them with all of the appropriate metadata to identify genotype, treatment condition, clonal cell line and imaging experiment."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "select_artifacts_df = (\n",
@@ -99,14 +111,18 @@
    "id": "8",
    "metadata": {},
    "source": [
-    "Alternatively, you can also query for the Ulabel's directly."
+    "Alternatively, query for the {class}`~lamindb.ULabel` directly:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "conditions = ln.ULabel.filter(\n",
@@ -125,14 +141,18 @@
    "id": "10",
    "metadata": {},
    "source": [
-    "By iterating through conditions, celllines and FOVs, we should only have the 3 images showing a single FOV. By ingesting our common config file we can now process them in scPortrait."
+    "By iterating through conditions, celllines and FOVs, we should only have the 3 images showing a single FOV to enable processing using ScPortrait."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# load config file for processing all datasets\n",
@@ -155,14 +175,18 @@
    "id": "12",
    "metadata": {},
    "source": [
-    "Lets take a look at the processing of one example FOV."
+    "Let's take a look at the processing of one example FOV."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# get input images for one example FOV\n",
@@ -201,7 +225,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# define and create an output location for the processed data\n",
@@ -302,7 +330,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Artifact.from_spatialdata(\n",
@@ -316,7 +348,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# define var schema\n",
@@ -380,7 +416,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "25",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "@ln.tracked()\n",
@@ -417,7 +457,7 @@
     "            )\n",
     "        )\n",
     "\n",
-    "        # check for spatialdata object\n",
+    "        # check for SpatialData object\n",
     "        (\n",
     "            ln.Artifact.using(\"scportrait/examples\").get(\n",
     "                key=f\"processed_data_imaging_use_case/{unique_project_id}/spatialdata.zarr\"\n",
@@ -454,7 +494,6 @@
     "        project.extract()\n",
     "\n",
     "        # ingest results to instance\n",
-    "\n",
     "        # single-cell images\n",
     "        curator = ln.curators.AnnDataCurator(project.h5sc, h5sc_schema)\n",
     "        artifact = curator.save_artifact(\n",
@@ -468,7 +507,7 @@
     "        artifact.features.add_values(annotation)\n",
     "        artifact.labels.add(ln.ULabel.get(name=\"scportrait single-cell images\"))\n",
     "\n",
-    "        # spatialdata object\n",
+    "        # SpatialData object\n",
     "        ln.Artifact.from_spatialdata(\n",
     "            sdata=project.filehandler.get_sdata(),\n",
     "            description=\"scportrait spatialdata object containing results of cells stained for autophagy markers\",\n",
@@ -482,7 +521,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Param(name=\"output_directory\", dtype=\"str\").save()"
@@ -543,7 +586,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "30",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.finish()"
