--- a/docs/imaging3.ipynb
+++ b/docs/imaging3.ipynb
@@ -32,14 +32,18 @@
     "- Summed intensity of the chosen channel in the regions labelled by each of the masks\n",
     "- Summed intensity of the chosen channel in the region labelled by each of the masks normalized for area\n",
     "\n",
-    "These features provide a comprehensive profile for later training machine learning models to identify cell types and states."
+    "These features provide a comprehensive profile for later training of machine learning models to identify cell types and states."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
@@ -63,7 +67,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Get single-cell images and config\n",
@@ -141,7 +149,7 @@
    "id": "7",
    "metadata": {},
    "source": [
-    "We upload the generated features to our instance."
+    "Ingest the generated features to our instance:"
    ]
   },
   {
@@ -175,7 +183,7 @@
    "id": "9",
    "metadata": {},
    "source": [
-    "We repeat this process for KO cells:"
+    "Repeat this process for KO cells:"
    ]
   },
   {
