--- a/docs/imaging4.ipynb
+++ b/docs/imaging4.ipynb
@@ -14,7 +14,7 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "# Train a machine learning model to identify autophagy-positive cells"
+    "# Identify autophagy-positive cells"
    ]
   },
   {
@@ -22,21 +22,25 @@
    "id": "2",
    "metadata": {},
    "source": [
-    "The goal of this notebook is to train a ML model to distininguish between autophagy-positive and autophagy-negative cells based on pre-calculated image features.\n",
+    "The goal of this notebook is to train a machine learning model to distininguish between autophagy-positive and autophagy-negative cells based on pre-calculated image features.\n",
     "\n",
     "We have defined our classes as follows:\n",
     "\n",
     "``Class 0`` : unstimulated WT cells  \n",
     "``Class 1`` : 14h Torin-1 stimulated WT cells  \n",
     "\n",
-    "After training and evaluating our model we want to see how cells without a functional *EI24* gene (``EI24KO`` cells) compare to ``WT`` cells."
+    "After training and evaluating our model, we want to compare cells without a functional *EI24* gene (``EI24KO`` cells) to ``WT`` cells."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
@@ -57,7 +61,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "def _get_cells(dataframe):\n",
@@ -158,7 +166,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# get example images for positive and negative autophagy\n",
@@ -228,7 +240,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# split data into training and testing\n",
@@ -313,9 +329,12 @@
    "id": "13",
    "metadata": {},
    "source": [
-    "Considering that it was only trained on very few input images, our classifier performs well with an AUC of 0.77. This is already much better than a random classifier which we would expect to have an AUC of 0.5.\n",
+    "Considering that our model was only trained on very few input images, it performs well with an AUC of 0.77.\n",
     "\n",
-    "However, since the AUC is < 1, our model is still appears to make some mistakes. We can further investigate this through a confusion matrix. Our classifier is performing well at recognizing autophagy negative cells, correctly identifying 92% of the examples in our dataset. Unfortunately, the classifier is not yet very good at correctly identifying autophagy-postive cells. Less than 50% of these examples are classified correctly.\n",
+    "However, since the AUC is < 1, our model is still appears to make some mistakes.\n",
+    "We can further investigate this through a confusion matrix. Our classifier is performing well at recognizing autophagy negative cells, correctly identifying 92% of the examples in our dataset.\n",
+    "Unfortunately, the classifier is not yet very good at correctly identifying autophagy-postive cells.\n",
+    "Less than 50% of these examples are classified correctly.\n",
     "\n",
     "Let's visualize some of the cells from each class to see if we can gain some insights into what our model is doing."
    ]
@@ -388,7 +407,7 @@
    "id": "15",
    "metadata": {},
    "source": [
-    "Looking at the False Positives (i.e. cells that look stimulated despite not having been stimulated) we can see two different types of cells:\n",
+    "Looking at the FPs (i.e. cells that look stimulated despite not having been stimulated) we can see two different types of cells:\n",
     "1. Very small cells that do not show any visible autophagosomes\n",
     "2. Larger cells that clearly show some autophagosomes\n",
     "\n",
@@ -397,13 +416,12 @@
     "Since our class labelling is just based on cells having not been treated with Torin-1, we would be annotating these cells incorrectly.\n",
     "In these cases our model does not make a mistake, but has in fact uncovered mislabelled examples in the dataset.\n",
     "\n",
-    "Looking at the False Negatives (i.e. cells that the model identifies as having been unstimulated despite having been stimulated) the cells appear homogenous and look more comparable to the True Positive Population.\n",
+    "Looking at the FNs (i.e. cells that the model identifies as having been unstimulated despite having been stimulated) the cells appear homogenous and look more comparable to the TP Population.\n",
     "So in this case it seems our model is making a mistake. \n",
     "\n",
-    "Before applying this model in a biological context, we would therefore probably need to invest some more time and effort into improving it! \n",
-    "\n",
+    "Before applying this model in a biological context, we would therefore probably need to invest some more time and effort into improving it.\n",
     "We could for example:\n",
-    "1. Train our model on more input data to make it more robust\n",
+    "1. Train our model on additional input data to make it more robust\n",
     "2. Perform a pre-screening of our training data to ensure we remove any incorrectly labelled cells\n",
     "3. Improve the image features we are training our model on to better reflect the biology we are interested in\n",
     "\n",
@@ -424,7 +442,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "data_ko = features_ko.drop(columns=[\"dataset\", \"cell_id\"])\n",
@@ -470,7 +492,8 @@
    "id": "19",
    "metadata": {},
    "source": [
-    "Interestingly, our model classifies a high percentage of stimulated *EI24*-KO cells as being unstimulated. Lets take a look at the images again."
+    "Interestingly, our model classifies a high percentage of stimulated *EI24*-KO cells as being unstimulated.\n",
+    "Lets take a look at the images again."
    ]
   },
   {
@@ -533,7 +556,9 @@
    "id": "21",
    "metadata": {},
    "source": [
-    "The *EI24* KO cells have fewer LC3 puncta, and seem to show a defect in the formation of autophagosomes. Even when stimulated, *EI24* KO cells look comparable to unstimated cells. In this instance, out model appears to correctly identify the biological effect of a deficiency in the *EI24* gene."
+    "The ``EI24 KO`` cells have fewer LC3 puncta, and seem to show a defect in the formation of autophagosomes.\n",
+    "Even when stimulated, ``EI24 KO`` cells look comparable to unstimated cells.\n",
+    "In this instance, out model appears to correctly identify the biological effect of a deficiency in the ``EI24`` gene."
    ]
   },
   {
@@ -559,7 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select a random cell from the WT  dataset\n",
+    "# select a random cell from the WT dataset\n",
     "cell = features_wt.sample(1, random_state=42)\n",
     "dataset = cell[\"dataset\"].values[0]\n",
     "cell_id = cell[\"cell_id\"].values[0]\n",
@@ -629,14 +654,6 @@
     "!rm -rf test-imaging\n",
     "!lamin delete --force test-imaging"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
