--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]'\n",
-    "!lamin init --storage ./test-multimodal --schema bionty"
+    "!lamin init --storage ./test-multimodal --modules bionty"
    ]
   },
   {
