--- a/docs/ehr.ipynb
+++ b/docs/ehr.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Source.filter(source=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
+    "bt.Source.filter(entity=\"bionty.Phenotype\", organism=\"all\").update(currently_used=False)\n",
     "disease_ontology = bt.Source.get(\n",
     "    entity=\"bionty.Disease\", name=\"mondo\", version=\"2023-04-04\"\n",
     ")\n",
