--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, you'll learn how to manage a growing number of spatial datasets as a single queryable collection:\n",
+    "Here, you'll learn how to manage spatial datasets:\n",
     "\n",
     "1. curate and ingest spatial data (![spatial1/4](https://img.shields.io/badge/spatial1/4-lightgrey))\n",
     "2. query & analyze spatial datasets ([![spatial2/4](https://img.shields.io/badge/spatial2/4-lightgrey)](/spatial2))\n",
@@ -36,7 +36,21 @@
     "Spatial omics data integrates molecular profiling (e.g., transcriptomics, proteomics) with spatial information, preserving the spatial organization of cells and tissues.\n",
     "It enables high-resolution mapping of molecular activity within biological contexts, crucial for understanding cellular interactions and microenvironments.\n",
     "\n",
-    "Many different spatial technologies such as ... exist, but here, we focus on a 10X Xenium dataset "
+    "Many different spatial technologies such as multiplexed imaging, spatial transcriptomics, spatial proteomics, whole-slide imaging, spatial metabolomics, and 3D tissue reconstruction exist which can all be stored in the [SpatialData](https://github.com/scverse/spatialdata) data framework.\n",
+    "For more details we refer to the original publication:\n",
+    "\n",
+    "Marconato, L., Palla, G., Yamauchi, K.A. et al. SpatialData: an open and universal data framework for spatial omics. Nat Methods 22, 58–62 (2025). [https://doi.org/10.1038/s41592-024-02212-x](https://doi.org/10.1038/s41592-024-02212-x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{note}\n",
+    "\n",
+    "A collection of curated spatial datasets in SpatialData format is available on the [scverse/spatialdata-db instance](https://lamin.ai/scverse/spatialdata-db).\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -45,20 +59,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-io,spatialdata-plot]\n",
+    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-plot]\n",
     "!lamin init --storage ./test-spatial --schema bionty"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import pandas as pd\n",
-    "from spatialdata.datasets import blobs\n",
     "import spatialdata_plot\n",
     "import warnings\n",
     "\n",
@@ -71,7 +88,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## An example spatial dataset"
+    "## Creating SpatialData Artifacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lamindb provides a {meth}`~lamindb.Artifact.from_spatialdata` method to create {class}`~lamindb.Artifact` from SpatialData objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "example_blobs_sdata = ln.core.datasets.spatialdata_blobs()\n",
+    "example_blobs_sdata"
    ]
   },
   {
@@ -80,80 +118,279 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace this with a proper dataset from for example https://spatialdata.scverse.org/en/latest/tutorials/notebooks/datasets/README.html\n",
+    "blobs_af = ln.Artifact.from_spatialdata(example_blobs_sdata, key=\"example_blobs.zarr\")\n",
+    "blobs_af"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# SpatialData Artifacts have the corresponding otype\n",
+    "blobs_af.otype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# SpatialData Artifacts can easily be loaded back into memory\n",
+    "example_blobs_in_memory = blobs_af.load()\n",
+    "example_blobs_in_memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Curating SpatialData datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image dataset.\n",
     "\n",
-    "sdata = blobs()\n",
-    "sdata.attrs[\"sample\"] = {\n",
-    "    \"assay\": \"Visium Spatial Gene Expression\",\n",
-    "    \"disease\": \"Alzheimer's dementia\",\n",
-    "    \"developmental_stage\": \"very early\",\n",
-    "}\n",
-    "sdata.tables[\"table\"].var.index = [\n",
-    "    \"ENSG00000139618\",  # BRCA2\n",
-    "    \"ENSG00000157764\",  # BRAF\n",
-    "    \"ENSG00000999999\",  # Does not exist - to test add new\n",
-    "]\n",
-    "sdata.tables[\"table\"].obs[\"sample_region\"] = pd.Categorical(\n",
-    "    [\"region 1\"] * 13 + [\"region 2\"] * 13\n",
+    "More details can be found in the [ingestion notebook](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# load first of two cropped Xenium datasets\n",
+    "xenium_aligned_1_sdata = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"xenium_aligned_1_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "xenium_aligned_1_sdata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metadata is stored in two places in the SpatialData object:\n",
+    "1. Dataset level metadata is stored in `sdata.attrs[\"sample\"]`.\n",
+    "2. Measurement specific metadata is stored in the associated tables in `sdata.tables`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a {class}`lamindb.Schema` to curate both sample and table metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# define sample schema\n",
+    "sample_schema = ln.Schema(\n",
+    "    name=\"SpatialData sample level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"organism\", dtype=bt.Organism).save(),\n",
+    "        ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save(),\n",
+    "        ln.Feature(name=\"disease\", dtype=bt.Disease).save(),\n",
+    "        ln.Feature(name=\"tissue\", dtype=bt.Tissue).save(),\n",
+    "        ln.Feature(name=\"panel\", dtype=\"cat[ULabel]\").save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "# define table obs schema\n",
+    "xenium_obs_schema = ln.Schema(\n",
+    "    name=\"Xenium SpatialData obs level\",\n",
+    "    features=[\n",
+    "        ln.Feature(name=\"celltype_major\", dtype=bt.CellType).save(),\n",
+    "    ],\n",
+    "    coerce_dtype=True,\n",
+    ").save()\n",
+    "\n",
+    "# define table var schema\n",
+    "xenium_var_schema = ln.Schema(\n",
+    "    name=\"Xenium SpatialData var level\", itype=bt.Gene.ensembl_gene_id, dtype=int\n",
+    ").save()\n",
+    "\n",
+    "# define composite schema\n",
+    "spatialdata_schema = ln.Schema(\n",
+    "    name=\"SpatialData Xenium schema\",\n",
+    "    otype=\"SpatialData\",\n",
+    "    components={\n",
+    "        \"sample\": sample_schema,\n",
+    "        \"table:obs\": xenium_obs_schema,\n",
+    "        \"table:var\": xenium_var_schema,\n",
+    "    },\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatialdata_schema)\n",
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "curator.slots[\"sample\"].cat.add_new_from(\"panel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_aligned_1_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
+    "    xenium_aligned_1_sdata.tables[\"table\"]\n",
+    "    .obs[\"celltype_major\"]\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"CAFs\": \"cancer associated fibroblast\",\n",
+    "            \"Endothelial\": \"endothelial cell\",\n",
+    "            \"Myeloid\": \"myeloid cell\",\n",
+    "            \"PVL\": \"perivascular cell\",\n",
+    "            \"T-cells\": \"T cell\",\n",
+    "            \"B-cells\": \"B cell\",\n",
+    "            \"Normal Epithelial\": \"epithelial cell\",\n",
+    "            \"Plasmablasts\": \"plasmablast\",\n",
+    "            \"Cancer Epithelial\": \"neoplastic epithelial cell\",\n",
+    "        }\n",
+    "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "curator = ln.Curator.from_spatialdata(\n",
-    "    sdata,\n",
-    "    var_index={\"table\": bt.Gene.ensembl_gene_id},\n",
-    "    categoricals={\n",
-    "        \"sample\": {\n",
-    "            \"assay\": bt.ExperimentalFactor.name,\n",
-    "            \"disease\": bt.Disease.name,\n",
-    "            \"developmental_stage\": bt.DevelopmentalStage.name,\n",
-    "        },\n",
-    "        \"table\": {\"sample_region\": ln.ULabel.name},\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ")\n",
-    "\n",
-    "curator.validate()\n",
-    "curator.add_new_from_var_index(\"table\")\n",
-    "curator.add_new_from(key=\"developmental_stage\", accessor=\"sample\")\n",
-    "curator.add_new_from(key=\"sample_region\", accessor=\"table\")\n",
-    "\n",
-    "curator.standardize(key=\"disease\", accessor=\"sample\")\n",
-    "\n",
-    "artifact = curator.save_artifact(description=\"blob spatialdata\")\n",
+    "curator.slots[\"table:obs\"].cat.add_new_from(\"celltype_major\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    curator.validate()\n",
+    "except ln.errors.ValidationError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact = curator.save_artifact(key=\"example_datasets/spatialdata1.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sdata.pl.render_images(\"blobs_multiscale_image\").pl.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!rm -rf test-spatial\n",
-    "!lamin delete --force test-spatial"
    ]
   }
  ],
