🎨 Add first complete work for spatial3
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -15,17 +15,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-io,spatialdata-plot]\n",
-    "!lamin init --storage ./test-spatial --schema bionty"
+    "Here, we show how we can query, access, and combine several SpatialData datasets across different technologies to train a Dense Net which predicts cell types Xenium data from an associated H&E image.\n",
+    "Specifically, we use the H&E image from Visium data, and the cell type information from overlapping Xenium data.\n",
+    "Both modalities are spatially aligned via an affine transformation.\n",
+    "\n",
+    "This tutorial is adapted from the [SpatialData documentation](https://spatialdata.scverse.org/en/stable/tutorials/notebooks/notebooks/examples/densenet.html)."
    ]
   },
   {
@@ -38,15 +35,34 @@
    },
    "outputs": [],
    "source": [
-    "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "import pandas as pd\n",
-    "import spatialdata_plot\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "import lamindb as ln\n",
+    "import bionty as bt\n",
+    "import numpy as np\n",
+    "\n",
+    "from spatialdata import transform\n",
+    "from spatialdata.dataloader.datasets import ImageTilesDataset\n",
+    "\n",
+    "import pytorch_lightning as pl\n",
+    "from pytorch_lightning.callbacks import LearningRateMonitor\n",
+    "from pytorch_lightning.callbacks.progress import TQDMProgressBar\n",
+    "\n",
+    "import torch.multiprocessing as mp\n",
+    "\n",
+    "mp.set_start_method(\"spawn\", force=True)\n",
+    "\n",
     "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we query for Visium and Xenium datasets.\n",
+    "TODO"
    ]
   },
   {
@@ -55,9 +71,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Talk to Sergei to figure out how we can support SpatialData with MappedCollection\n",
-    "# Cell Segmentation, domain adaptation, or just some classification\n",
-    "# Potentially here or in a new guide how to create a tiledbsoma store for spatial data. Talk to Sergei again."
+    "merged = (\n",
+    "    ln.Artifact.using(\"laminlabs/lamindata\").get(key=\"merged_guide_min.zarr\").load()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Visium image is rotated with respect to the Xenium data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_cell_types.png\" width=\"600\" height=\"500\" alt=\"Dense network of cell types\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we create an `ImageTilesDataset` using our merged `SpatialData` object.\n",
+    "We further import an image tile transform, the corresponding Pytorch Lightning `DataModule`, and the final `DenseNet` model from an existing script."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "````{dropdown}\n",
+    "```{eval-rst}\n",
+    "    literalinclude:: spatial_ml.py\n",
+    "    :language: python\n",
+    "    :caption: Spatial cell type classification model definition\n",
+    "```\n",
+    "````"
    ]
   },
   {
@@ -70,9 +121,93 @@
    },
    "outputs": [],
    "source": [
-    "# clean up test instance\n",
-    "!rm -rf test-spatial\n",
-    "!lamin delete --force test-spatial"
+    "from spatial_ml import tile_transform, TilesDataModule, DenseNetModel\n",
+    "\n",
+    "dataset = ImageTilesDataset(\n",
+    "    sdata=merged,\n",
+    "    regions_to_images={\"cell_circles\": \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"},\n",
+    "    regions_to_coordinate_systems={\"cell_circles\": \"aligned\"},\n",
+    "    table_name=\"table\",\n",
+    "    tile_dim_in_units=6\n",
+    "    * np.mean(transform(merged[\"cell_circles\"], to_coordinate_system=\"aligned\").radius),\n",
+    "    transform=tile_transform,\n",
+    "    rasterize=True,\n",
+    "    rasterize_kwargs={\"target_width\": 32},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we only need to set up a DataModule, our model, and we can start training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "pl.seed_everything(7)\n",
+    "\n",
+    "tiles_data_module = TilesDataModule(batch_size=64, num_workers=8, dataset=dataset)\n",
+    "\n",
+    "tiles_data_module.setup()\n",
+    "train_dl = tiles_data_module.train_dataloader()\n",
+    "val_dl = tiles_data_module.val_dataloader()\n",
+    "test_dl = tiles_data_module.test_dataloader()\n",
+    "\n",
+    "model = DenseNetModel(\n",
+    "    learning_rate=1e-5,\n",
+    "    in_channels=dataset[0][0].shape[0],\n",
+    "    num_classes=len(merged[\"table\"].obs[\"celltype_major\"].cat.categories.tolist()),\n",
+    ")\n",
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=1,\n",
+    "    callbacks=[\n",
+    "        LearningRateMonitor(logging_interval=\"step\"),\n",
+    "        TQDMProgressBar(refresh_rate=5),\n",
+    "    ],\n",
+    "    log_every_n_steps=20,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "trainer.fit(model, datamodule=tiles_data_module)\n",
+    "trainer.test(model, datamodule=tiles_data_module)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we were to perform a prediction and evaluate it, we would see predictions like:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "source": [
+    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_predicted.png\" width=\"1000\" height=\"500\" alt=\"Model predictions\">"
    ]
   }
  ],
